<resources>
    <string name="app_name">txm</string>
    <string name="setting">设置</string>
    <string name="resume">Resume</string>
    <string name="cancel">取消</string>
    <string name="title_dialog">Tips</string>
    <string name="message_permission_rationale">Grant the following permissions to continue the program:\n\n%1$s</string>
    <string name="message_overlay_failed">Your phone is not allowed us to draw on other applications.</string>
    <string name="message_permission_always_failed">我们需要以下权限，请在设置中为我们开启：\n\n%1$s</string>

    <string name="get_code">获取验证码</string>
    <string name="digits_code">0123456789abcdefghijklmnopqrstuvwxyz</string>
    <string name="complete">完成</string>
    <string name="error_phone">手机号码不能为空</string>
    <string name="error_phone1">手机号码格式不正确</string>
    <string name="error_code">验证码不能为空</string>
    <string name="error_pwd">密码不能为空</string>
    <string name="error_pwd2">密码长度为6-16位</string>
    <string name="preservation">保存</string>
    <string name="error_edit">当前无修改</string>
    <string name="complete2">确定</string>
    <string name="please_choose">请选择</string>

    <!-- 标题 -->
    <string name="login_top">工厂信息化管理系统</string>
    <string name="forget_pwd_top">忘记密码</string>


    <!--登陆-->
    <string name="login_phone">请输入账号</string>
    <string name="login_pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>

    <!--忘记密码-->
    <string name="forget_phone">请输入手机号</string>
    <string name="forget_code">请输入验证码</string>
    <string name="forget_reset_pwd">请重置密码</string>
    <string name="forget_reset_pwd2">请再次确认密码</string>

    <!--工位-->
    <string name="Import">导入</string>

    <!--查询-->
    <string name="scan">扫一扫</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="total">总数</string>
    <string name="qualified_number">合格数</string>
    <string name="qualified_rate">合格率</string>
    <string name="please_select_time_period">请选择完时间阶段</string>
    <string name="material_tracking">物料追踪</string>
    <string name="product_information">产品信息</string>
    <string name="station_information">工位信息</string>
    <string name="statistical_report">统计报表</string>
    <string name="planned_output">计划产量</string>
    <string name="actual_production">实际产量</string>
    <string name="completion_rate">完成率</string>

    <!--设置-->
    <string name="set">设置</string>
    <string name="orporate_image">公司形象图</string>
    <string name="orporate_logo">公司logo</string>
    <string name="orporate_name">公司名称</string>
    <string name="password_modification">密码修改</string>
    <string name="update_name">公司名称修改</string>
    <string name="please_company_name">请输入公司管理名称</string>
    <string name="update_login_pwd">请输入当前的登录密码</string>
    <string name="update_new_pwd">请输入当前的登录密码</string>
    <string name="update_pwd">密码修改</string>
    <string name="login_phone2">登录账号</string>
    <string name="old_pwd">当前密码</string>
    <string name="new_pwd">新的密码</string>



</resources>
