<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_FFFFFF"
        android:orientation="vertical">

        <include layout="@layout/include_top" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingConstraints">

            <android.support.constraint.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.06" />

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/px232"
                android:layout_height="@dimen/px232"
                android:adjustViewBounds="true"
                android:background="@mipmap/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline1" />


            <com.flyco.roundview.RoundLinearLayout
                android:id="@+id/ly_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/px50"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo"
                app:rv_cornerRadius="@dimen/px10"
                app:rv_strokeColor="@color/gray_CCCCCC"
                app:rv_strokeWidth="@dimen/px1">

                <ImageView
                    android:layout_width="@dimen/px32"
                    android:layout_height="@dimen/px36"
                    android:layout_marginLeft="@dimen/px20"
                    android:background="@mipmap/login_user" />

                <View
                    android:layout_width="@dimen/px1"
                    android:layout_height="@dimen/px50"
                    android:layout_marginLeft="@dimen/px20"
                    android:layout_marginRight="@dimen/px20"
                    android:background="@color/gray_CCCCCC" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/forget_phone"
                    android:inputType="phone"
                    android:padding="@dimen/px20"
                    android:textColor="@color/black_AAAAAA"
                    android:textSize="@dimen/size32" />


                <com.flyco.roundview.RoundTextView
                    android:id="@+id/tv_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minEms="6"
                    android:padding="@dimen/px20"
                    android:text="@string/get_code"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/size32"
                    app:rv_backgroundColor="@color/blue_26A4E1"
                    app:rv_backgroundPressColor="@color/blue_2486B6"
                    app:rv_cornerRadius_BR="@dimen/px10"
                    app:rv_cornerRadius_TR="@dimen/px10" />

            </com.flyco.roundview.RoundLinearLayout>


            <com.flyco.roundview.RoundLinearLayout
                android:id="@+id/ly_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px50"
                android:layout_marginRight="@dimen/px50"
                android:layout_marginTop="@dimen/px30"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/px20"
                app:layout_constraintTop_toBottomOf="@+id/ly_phone"
                app:rv_cornerRadius="@dimen/px10"
                app:rv_strokeColor="@color/gray_CCCCCC"
                app:rv_strokeWidth="@dimen/px1">

                <ImageView
                    android:layout_width="@dimen/px32"
                    android:layout_height="@dimen/px36"
                    android:background="@mipmap/login_verificode" />

                <View
                    android:layout_width="@dimen/px1"
                    android:layout_height="@dimen/px50"
                    android:layout_marginLeft="@dimen/px20"
                    android:layout_marginRight="@dimen/px20"
                    android:background="@color/gray_CCCCCC" />

                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:digits="@string/digits_code"
                    android:hint="@string/forget_code"
                    android:maxEms="6"
                    android:textColor="@color/black_AAAAAA"
                    android:textSize="@dimen/size32" />

            </com.flyco.roundview.RoundLinearLayout>

            <com.flyco.roundview.RoundLinearLayout
                android:id="@+id/ly_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px50"
                android:layout_marginRight="@dimen/px50"
                android:layout_marginTop="@dimen/px30"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/px20"
                app:layout_constraintTop_toBottomOf="@+id/ly_code"
                app:rv_cornerRadius="@dimen/px10"
                app:rv_strokeColor="@color/gray_CCCCCC"
                app:rv_strokeWidth="@dimen/px1">

                <ImageView
                    android:layout_width="@dimen/px32"
                    android:layout_height="@dimen/px36"
                    android:background="@mipmap/login_password" />

                <View
                    android:layout_width="@dimen/px1"
                    android:layout_height="@dimen/px50"
                    android:layout_marginLeft="@dimen/px20"
                    android:layout_marginRight="@dimen/px20"
                    android:background="@color/gray_CCCCCC" />

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/forget_reset_pwd"
                    android:inputType="textPassword"
                    android:textColor="@color/black_AAAAAA"
                    android:textSize="@dimen/size32" />

            </com.flyco.roundview.RoundLinearLayout>

            <com.flyco.roundview.RoundLinearLayout
                android:id="@+id/ly_pwd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px50"
                android:layout_marginRight="@dimen/px50"
                android:layout_marginTop="@dimen/px30"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/px20"
                app:layout_constraintTop_toBottomOf="@+id/ly_pwd"
                app:rv_cornerRadius="@dimen/px10"
                app:rv_strokeColor="@color/gray_CCCCCC"
                app:rv_strokeWidth="@dimen/px1">

                <ImageView
                    android:layout_width="@dimen/px32"
                    android:layout_height="@dimen/px36"
                    android:background="@mipmap/login_password" />

                <View
                    android:layout_width="@dimen/px1"
                    android:layout_height="@dimen/px50"
                    android:layout_marginLeft="@dimen/px20"
                    android:layout_marginRight="@dimen/px20"
                    android:background="@color/gray_CCCCCC" />

                <EditText
                    android:id="@+id/et_pwd2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/forget_reset_pwd2"
                    android:inputType="textPassword"
                    android:textColor="@color/black_AAAAAA"
                    android:textSize="@dimen/size32" />

            </com.flyco.roundview.RoundLinearLayout>

            <com.flyco.roundview.RoundTextView
                android:id="@+id/tv_submit"
                style="@style/RoundBlueTextView"
                android:layout_marginLeft="@dimen/px50"
                android:layout_marginRight="@dimen/px50"
                android:layout_marginTop="@dimen/px80"
                android:text="@string/complete"
                app:layout_constraintTop_toBottomOf="@+id/ly_pwd2"
                app:rv_backgroundColor="@color/blue_26A4E1"
                app:rv_backgroundPressColor="@color/blue_2486B6"
                app:rv_cornerRadius="@dimen/px10" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/px166"
                android:layout_marginTop="@dimen/px100"
                android:background="@mipmap/bg"
                app:layout_constraintBottom_toBottomOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</layout>